# CeylonRoots

./: .gitignore  README.md  pyrightconfig.json
.claude/: settings.json
.github/: QUICKSTART.md  WORKFLOW_GUIDE.md
backend/: .gitignore  pom.xml
backend-flask/: .envrc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  app.py  local.cfg.example  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.txt  seed.py  submissions.json  submissions_schema.json
backend-flask/ceylonroots/: __init__.py  access.py  default_config.py  models.py  utils.py
backend-flask/ceylonroots/templates/: base.html  blog_form.html  blog_list.html  bookings_detail.html  bookings_list.html  destinations_form.html  destinations_list.html  gallery_form.html  gallery_list.html  guides_form.html  guides_list.html  index.html  login.html  packages_form.html  packages_list.html  reviews_list.html  submission_detail.html  submissions_list.html  testimonials_form.html  testimonials_list.html
backend-flask/ceylonroots/views/: api.py  blog.py  bookings.py  destinations.py  gallery.py  guides.py  main.py  meta.py  packages.py  reviews.py  submissions.py  testimonials.py
backend-flask/migrations/: env.py
backend-flask/migrations/versions/: e2aa6c7839ba_flask_admin_tables.py
backend-flask/tests/: conftest.py  test_api.py
ceylonroots/: .gitignore  .prettierignore  .prettierrc.json  README.md  auth.ts  eslint.config.mjs  middleware.ts  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  task.json  tsconfig.json  tsconfig.seed.json
(+301 files in other folders)
