[project]
name = "ceylonroots-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "werkzeug>=2.3.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "flask-login>=0.6.3",
    "flask-jwt-extended==4.6.0",
    "wtforms==3.1.2",
    "flask-wtf==1.2.1",
    "pydantic==2.10.6",
    "pydantic-extra-types==2.5.0",
    "flask-mail==0.9.1",
    "flask-caching==2.3.0",
    "flask-cors>=6.0.1",
    "sentry-sdk>=2.8.0",
    "phonenumbers==8.12.57",
    "email-validator==2.1.0",
    "python-dateutil==2.9.0",
    "pytz==2022.7",
    "jsonschema==4.20.0",
    "markdown>=3.7",
    "requests>=2.32.4",
    "simplejson==3.18.0",
    "click==8.1.3",
    "filelock>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==6.2.4",
    "pytest-flask==1.2.0",
    "pytest-cov==2.12.1",
    "ruff==0.2.2",
    "pyright==1.1.363",
    "djlint==1.35.2",
    "pre-commit==2.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ceylonroots*"]
exclude = ["migrations*", "tests*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["migrations/"]
